--- a/index.html
+++ b/index.html
@@ -76,29 +76,20 @@
   <script type="importmap">
 {
   "imports": {
-    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.555.0",
     "react/": "https://aistudiocdn.com/react@^19.2.0/",
     "react": "https://aistudiocdn.com/react@^19.2.0",
-    "vite": "https://aistudiocdn.com/vite@^7.2.6",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
+    "firebase/": "https://aistudiocdn.com/firebase@^12.6.0/",
+    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.555.0",
+    "vite": "https://aistudiocdn.com/vite@^7.2.6",
     "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1",
-    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0",
-    "firebase/": "https://aistudiocdn.com/firebase@^12.6.0/"
+    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0"
   }
 }
 </script>
 </head>
   <body class="bg-sakura-50 dark:bg-midnight-950 text-slate-800 dark:text-slate-100 transition-colors duration-300">
     <div id="root"></div>
-    <!-- Error Display for White Screen Debugging -->
-    <div id="global-error" style="display:none; color: #ef4444; padding: 20px; text-align: center; font-family: monospace;"></div>
-    <script>
-      window.onerror = function(message, source, lineno, colno, error) {
-        var display = document.getElementById('global-error');
-        display.style.display = 'block';
-        display.innerHTML = '<strong>App Error:</strong> ' + message + '<br/><small>' + source + ':' + lineno + '</small>';
-      };
-    </script>
     <script type="module" src="/index.tsx"></script>
   </body>
 </html>
