--- a/index.html
+++ b/index.html
@@ -4,33 +4,31 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AniTrack - Your Anime Journey</title>
-    <link rel="icon" type="image/png" href="/logo.png" />
+    <link rel="icon" type="image/png" href="public/logo.png" />
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
-        darkMode: 'class',
         theme: {
           extend: {
             colors: {
-              sakura: {
-                50: '#fff0f5',
-                100: '#ffe4e9',
-                200: '#fecdd6',
-                300: '#fda4b4',
-                400: '#fb718e',
-                500: '#f43f68',
-                600: '#e11d53',
-                900: '#881337',
-              },
-              midnight: {
-                800: '#1e1b4b',
-                900: '#0f172a',
-                950: '#020617',
+              cyber: {
+                black: '#050505',
+                green: '#00ff9f',
+                pink: '#ff0055',
+                blue: '#00baee',
+                purple: '#bc13fe',
+                gray: '#1a1a1a',
               }
             },
+            fontFamily: {
+              mono: ['"Courier New"', 'Courier', 'monospace'],
+              sans: ['"Quicksand"', 'sans-serif'],
+            },
             animation: {
-              'fade-in': 'fadeIn 0.5s ease-out',
-              'slide-up': 'slideUp 0.5s ease-out',
+              'fade-in': 'fadeIn 0.3s ease-out',
+              'slide-up': 'slideUp 0.4s cubic-bezier(0.16, 1, 0.3, 1)',
+              'spin-slow': 'spin 8s linear infinite',
+              'pulse-fast': 'pulse 1.5s cubic-bezier(0.4, 0, 0.6, 1) infinite',
             },
             keyframes: {
               fadeIn: {
@@ -50,28 +48,27 @@
     <style>
       body {
         font-family: 'Quicksand', sans-serif;
+        background-color: #000;
+        color: #e5e5e5;
       }
-      /* Custom Scrollbar */
+      /* Custom Scrollbar for Cyberpunk Look */
       ::-webkit-scrollbar {
-        width: 8px;
+        width: 6px;
+        height: 6px;
       }
       ::-webkit-scrollbar-track {
-        background: transparent; 
+        background: #050505; 
       }
       ::-webkit-scrollbar-thumb {
-        background: #888; 
-        border-radius: 4px;
+        background: #333; 
+        border-radius: 0;
       }
       ::-webkit-scrollbar-thumb:hover {
-        background: #555; 
+        background: #00ff9f; 
       }
-      .glass-panel {
-        background: rgba(255, 255, 255, 0.7);
-        backdrop-filter: blur(12px);
-        -webkit-backdrop-filter: blur(12px);
-      }
-      .dark .glass-panel {
-        background: rgba(15, 23, 42, 0.6);
+      
+      .clip-corner {
+        clip-path: polygon(10px 0, 100% 0, 100% calc(100% - 10px), calc(100% - 10px) 100%, 0 100%, 0 10px);
       }
     </style>
 <script type="importmap">
@@ -84,12 +81,13 @@
     "lucide-react": "https://aistudiocdn.com/lucide-react@^0.555.0",
     "vite": "https://aistudiocdn.com/vite@^7.2.6",
     "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1",
-    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0"
+    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0",
+    "framer-motion": "https://aistudiocdn.com/framer-motion@^11.0.8"
   }
 }
 </script>
 </head>
-  <body class="bg-sakura-50 dark:bg-midnight-950 text-slate-800 dark:text-slate-100 transition-colors duration-300">
+  <body class="bg-black text-white antialiased">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
